# quant_journey

./: .env.example  .gitignore  LICENSE  Makefile  README.md  doc.md  roadmap.md  ruff.toml
.claude/skills/add-panel/: SKILL.md
.claude/skills/command-center-design-system/: SKILL.md
.claude/skills/fastapi-endpoint/: SKILL.md
.claude/skills/graduate-to-quant-core/: SKILL.md
.claude/skills/quant-analytic/: SKILL.md
.claude/skills/register-data-source/: SKILL.md
.github/workflows/: ci.yml  frontend.yml  sync-doc.yml
.obsidian/plugins/obsidian-git/: data.json
001_market_data_downloader_cleaner/: README.md  main.py  pyproject.toml
001_market_data_downloader_cleaner/tests/: conftest.py  test_downloader.py
Command Center/: 01 - Introduction.md  02 - Overview.md  03 - Roadmap.md
command_center/: CLAUDE.md  METAPROMPT.md
command_center/backend/: README.md  openapi.json  pyproject.toml  ruff.toml
command_center/backend/app/: __init__.py  config.py  deps.py  main.py  middleware.py  openapi_dump.py  seed.py
command_center/backend/app/routers/: __init__.py  analytics.py  catalog.py  meta.py  ohlcv.py
command_center/backend/app/schemas/: __init__.py  analytics.py  catalog.py  common.py  ohlcv.py
command_center/backend/app/services/: __init__.py  downsample.py  serialization.py
command_center/backend/tests/: conftest.py  test_api.py
command_center/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
command_center/frontend/src/: App.tsx  main.tsx
command_center/frontend/src/charts/: EChart.tsx  MultiLineChart.tsx  PriceChart.tsx
command_center/frontend/src/lib/: command.test.ts  command.ts  format.ts
command_center/frontend/src/lib/api/: client.ts  schema.d.ts
command_center/frontend/src/lib/registry/: autoload.ts  registry.test.ts  registry.ts  types.ts
command_center/frontend/src/panels/catalog/: CatalogPanel.tsx  index.ts  useCatalog.ts
command_center/frontend/src/panels/correlation/: CorrelationPanel.tsx  index.ts  useCorrelation.ts
command_center/frontend/src/panels/performance/: PerformancePanel.tsx  index.ts  usePerformance.ts
command_center/frontend/src/panels/price/: PricePanel.tsx  index.ts  usePrice.ts
command_center/frontend/src/panels/returns/: ReturnsPanel.tsx  index.ts  useDistribution.ts
command_center/frontend/src/panels/rolling/: RollingPanel.tsx  index.ts  useRolling.ts
command_center/frontend/src/shell/: CommandBar.tsx  PanelHost.tsx  StatusBar.tsx  Terminal.tsx
command_center/frontend/src/store/: selection.test.ts  selection.ts  workspace.ts
command_center/frontend/src/theme/: chartTheme.ts  tokens.css
quant_core/: README.md  pyproject.toml
quant_core/src/quant_core/: __init__.py  _annualization.py  _frames.py
quant_core/src/quant_core/backtest/: __init__.py
quant_core/src/quant_core/data/: __init__.py  cache.py  catalog.py  clean.py  corporate_actions.py  loader.py  providers.py  schema.py  synthetic.py
quant_core/src/quant_core/factors/: __init__.py  beta.py
quant_core/src/quant_core/metrics/: __init__.py  performance.py  risk.py
quant_core/src/quant_core/portfolio/: __init__.py  cluster.py  covariance.py
quant_core/src/quant_core/stats/: __init__.py  distribution.py  returns.py  rolling.py
quant_core/tests/: conftest.py  test_analytics.py  test_cache_loader.py  test_catalog.py  test_clean.py  test_corporate_actions.py  test_providers.py  test_rebased.py  test_schema.py  test_synthetic.py
scripts/: fetch_doc.py
