[project]
name = "001-market-data-downloader-cleaner"
version = "0.1.0"
description = "Roadmap #1 — pull OHLCV for a universe, clean it, and show why adjusted close matters."
requires-python = ">=3.12"

# Version-pinned shared core (compatible-release within the 0.1 minor) + project-unique deps.
dependencies = [
    "quant-core[yfinance]>=0.1,<0.2",
    "matplotlib>=3.8",
]

[tool.uv]
package = false                       # runnable app, not an installable library

[tool.uv.sources]
# Invariant: every NNN_* project is a flat sibling of quant_core at the repo root.
quant-core = { path = "../quant_core", editable = true }

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
