[project]
name = "quant-core"
version = "0.1.1"
description = "Shared mini-library for the 100-project quant journey: reusable data, backtest, metrics, portfolio, factor, and stats tooling."
readme = "README.md"
requires-python = ">=3.12"          # resolver floor; NOT the interpreter selector (that's .python-version)
license = "MIT"
authors = [{ name = "David Boncui" }]

# Lean, universal base deps only. Everything heavier is an opt-in extra below so that
# light projects (and the eventual torch-heavy ones) are not forced to install it.
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "pandas-market-calendars>=4.4",   # correct trading sessions => holidays are not mistaken for data gaps
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
yfinance = ["yfinance>=0.2.51"]       # default market-data provider (isolated: yfinance breaks often)
polygon  = ["polygon-api-client>=1.14"]
econ     = ["statsmodels>=0.14", "arch>=7.0"]   # Phase 4 (econometrics)
opt      = ["cvxpy>=1.5"]                        # Phase 3 (portfolio optimization)
ml       = ["scikit-learn>=1.5"]                 # Phase 8 (ML for alpha); also covariance shrinkage
stats    = ["scipy>=1.13"]                        # QQ/normality p-values, gaussian VaR, cluster ordering

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
