[project]
name = "command-center-backend"
version = "0.1.0"
description = "FastAPI viz/serialization layer over quant_core for the command_center research terminal."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "David Boncui" }]

dependencies = [
    "quant-core[stats]>=0.1,<0.2",   # graduated analytics + scipy-backed stats
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
duckdb = ["duckdb>=1.0"]              # Phase-6 large/tick reads (behind the load_ohlcv seam)

[tool.uv]
package = false                       # a runnable service, not a library

[tool.uv.sources]
# command_center/backend is one level deeper than NNN_* projects -> ../../quant_core
quant-core = { path = "../../quant_core", editable = true }

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
